force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <description>user applicant details address</description>
    <label>Address</label>
    <nameField>
        <displayFormat>ADDID-{0000000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>