force-app/main/default/objects/Address__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>parament Address</description>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>