force-app/main/default/objects/Address__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>IF( Applicant__r.Age__c &gt;18,Applicant__r.First_Name__c +&quot; &quot;+ Applicant__r.Last_Name__c, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>