force-app/main/default/objects/Address__c/fields/pin_Code__c.field-meta.xml
<CustomField>
    <fullName>pin_Code__c</fullName>
    <label>pin Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>