force-app/main/default/objects/Address__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>