force-app/main/default/objects/Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>city__c</columns>
    <columns>Applicant_Name__c</columns>
    <columns>Applicant__c</columns>
    <columns>Address_Line_2__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>